# suomipeli

./: .gitignore  Cargo.toml  LICENSE  README.md  flash  up
.cargo/: config.toml
src/: counter.rs  lib.rs  mypin.rs  wrapper.rs
