[package]
authors = ["sjm"]
edition = "2021"
readme = "README.md"
name = "suomipeli"
version = "0.2.2"
resolver = "2"


[features]
default = ["io_irq", "test_output", "io_debug", "input_debug"]
io_irq = []
io_noirq = []
io_debug = []
input_debug = []
test_output = []


[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
embedded-hal = { version = "0.2", features = ["unproven"] }
embedded-time = "0.12"
fugit = "0.3"
panic-halt = "0.2"
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
rp-pico = "0.8"
rp2040-boot2 = { version = "0.3" }
systick-monotonic = "1.0"

shared-bus = { version = "0.3", features = ["cortex-m"] }
# shared-bus = { git = "https://github.com/Rahix/shared-bus.git", features = ["cortex-m", "eh-alpha"] }
port-expander-multi = { git = "https://github.com/sjm42/port-expander-multi.git" }
# port-expander-multi = { path = "../../00test/port-expander-multi" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false


[[bin]]
name = "main"
test = false
bench = false

# EOF
